[gd_scene load_steps=6 format=3 uid="uid://blc4u5o2ct57"]

[ext_resource type="Script" path="res://scripts/inventory/tripod_spin.gd" id="1_mfgia"]
[ext_resource type="Texture2D" uid="uid://8esylskxswca" path="res://sprites/items/item_spawnables/tripod.png" id="2_87o8e"]

[sub_resource type="CircleShape2D" id="CircleShape2D_778ft"]
radius = 9.0

[sub_resource type="Animation" id="Animation_kha4k"]
resource_name = "spin"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("main_body/main_body_2/Tripod:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 6.28319]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_uxwwe"]
_data = {
"spin": SubResource("Animation_kha4k")
}

[node name="tripod_spin" type="Node2D"]
texture_filter = 1
script = ExtResource("1_mfgia")

[node name="main_body" type="Node2D" parent="."]

[node name="main_body_2" type="Node2D" parent="main_body"]

[node name="Area2D" type="Area2D" parent="main_body/main_body_2"]
collision_layer = 8
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="main_body/main_body_2/Area2D"]
shape = SubResource("CircleShape2D_778ft")

[node name="Tripod" type="Sprite2D" parent="main_body/main_body_2"]
rotation = 0.117948
texture = ExtResource("2_87o8e")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "spin"
libraries = {
"": SubResource("AnimationLibrary_uxwwe")
}

[node name="Timer" type="Timer" parent="."]
wait_time = 4.0
one_shot = true
autostart = true

[connection signal="body_entered" from="main_body/main_body_2/Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
